[package]
name = "vespa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = "3.1.8"
printpdf = {version = "0.5.2", features = ["embedded_images"]}
serde = {version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
